# Veritas-Pipeline-BeyondChats

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
Sample Inputs/: sample-chat-conversation-01.json  sample-chat-conversation-02.json  sample_context_vectors-01.json  sample_context_vectors-02.json
data/: mock_context.json  mock_conversation.json
experiments/langchain_demo/: basic_rag_demo.py  requirements.txt
scripts/: run_eval.py
src/eval_pipeline/: aggregate.py  config.py  loader.py  profiling.py  schemas.py  targeting.py
src/eval_pipeline/metrics/: completeness.py  groundedness.py  relevance.py  relevance_lc.py  toxicity.py
tests/: __init__.py  test_loader.py  test_metrics.py  test_schemas.py  test_targeting.py
