[project]
name = "beychats-llm-eval"
version = "0.1.0"
description = "Real-time LLM evaluation pipeline for BeyondChats internship assignment."
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "json5>=0.9.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
